--- a/report/test.tex
+++ b/report/test.tex
@@ -9,6 +9,7 @@
 \usepackage[most]{tcolorbox}
 \usepackage{parskip}
 \usepackage{caption}
+\usepackage{hyperref}
 \usepackage{subcaption} % Adds space between paragraphs, cleaner than indentation
 
 % --- Header & Footer ---
@@ -96,7 +97,7 @@ Entre las muchas funciones que entrega, facilita la inyección de planetas ``fal
 
 \section{Experimentos}
 
-Todas las pruebas realizadas se encuentran en un repositorio de GitHub, ademas de los cubos utilizados para facilidad de reproducción.
+Todas las pruebas realizadas se encuentran en un repositorio de \href{https://github.com/astrolonin/mgvd-ProySem}{GitHub}, ademas de los cubos utilizados para facilidad de reproducción.
 
 Se realizará una comparación entre los métodos de PCA \textit{full-frame} y PCA \textit{annular} para observar sus diferencias en rendimiento, además de identificar en qué casos uno resulta mejor que el otro.
 
