--- a/report/test.tex
+++ b/report/test.tex
@@ -221,6 +221,6 @@ Entre los temas que no se observaron en este proyecto está el costo computacion
 
 El proyecto, a grandes rasgos, cubrió los objetivos propuestos en un principio, evaluando de manera experimental el uso de PCA en el área de HCI. Sin embargo, la utilización de ambos formatos de PCA disponibles y su contrastación en distintos casos es algo nuevo, que ayudó a estructurar de manera más sólida el proyecto y la experimentación.
 
-Finalmente, este proyecto resultó de gran ayuda como 
+Finalmente, este proyecto resultó de gran ayuda como introducción a los algoritmos de HCI, fijando una base para un análisis más complejo en el futuro, con objetivos de poder desarrollar algoritmos dentro del área. Esto mediante un acercamiento más directo al uso de las implementaciones, conocidas en teoría pero que nunca habia visto en funcionamiento.
 
 \end{document}
